Created python file for large_scale training

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -71,24 +71,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = [np.concatenate(i[0], axis=0) for i in data]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = [np.array(i[1]) for i in data]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "x = [np.concatenate(i[0], axis=0) for i in data]\n",
+    "\n",
+    "y = [np.array(i[1]) for i in data]\n",
+    "\n",
     "max_len = max(x, key = lambda i: i.shape[0]).shape[0]"
    ]
   },
@@ -109,25 +95,11 @@
     "        i = np.concatenate([i, pad_matrix], axis=0)\n",
     "        x_pad.append(i)\n",
     "    else:\n",
-    "        x_pad.append(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        x_pad.append(i)\n",
+    "\n",
     "test = x_pad.pop()\n",
-    "test_y = y.pop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test_y = y.pop()\n",
+    "\n",
     "x = x_pad\n",
     "x = np.stack(x, axis=0)\n",
     "y = np.stack(y, axis=0)"
@@ -157,111 +129,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Sequential()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(layers.Conv1D(4, 100, activation='relu', input_shape = INPUT_SHAPE))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(layers.MaxPool1D())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(layers.Dropout(0.5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Not in original model, but I need 1 d output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(layers.Flatten())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(layers.Dense(100))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(layers.Dense(1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(None, 1)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.output_shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.build()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "model = Sequential()\n",
+    "\n",
+    "model.add(layers.Conv1D(4, 100, activation='relu', input_shape = INPUT_SHAPE))\n",
+    "\n",
+    "model.add(layers.MaxPool1D())\n",
+    "\n",
+    "model.add(layers.Dropout(0.5))\n",
+    "\n",
+    "#Not in original model, but I need 1 d output\n",
+    "\n",
+    "model.add(layers.Flatten())\n",
+    "\n",
+    "model.add(layers.Dense(100))\n",
+    "\n",
+    "\n",
+    "model.add(layers.Dense(1))\n",
+    "\n",
+    "model.build()\n",
+    "\n",
     "model.compile(optimizer=keras.optimizers.Adadelta(), loss=losses.MeanSquaredError())"
    ]
   },
@@ -711,13 +601,7 @@
       "Epoch 218/500\n",
       "1/1 - 0s - loss: 0.2099\n",
       "Epoch 219/500\n",
-      "1/1 - 0s - loss: 0.5063\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 - 0s - loss: 0.5063\n",
       "Epoch 220/500\n",
       "1/1 - 0s - loss: 0.4256\n",
       "Epoch 221/500\n",
@@ -1149,13 +1033,7 @@
       "Epoch 434/500\n",
       "1/1 - 0s - loss: 0.1536\n",
       "Epoch 435/500\n",
-      "1/1 - 0s - loss: 0.1751\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 - 0s - loss: 0.1751\n",
       "Epoch 436/500\n",
       "1/1 - 0s - loss: 0.1632\n",
       "Epoch 437/500\n",
@@ -1376,9 +1254,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
