--- a/prepData.ipynb
+++ b/prepData.ipynb
@@ -65,43 +65,15 @@
    "outputs": [],
    "source": [
     "import sklearn\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf_idf = TfidfVectorizer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
     "tf_idf = TfidfVectorizer()\n",
-    "vecs = tf_idf.fit_transform(split_by_call)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokens = tf_idf.inverse_transform(vecs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "tf_idf = TfidfVectorizer()\n",
+    "vecs = tf_idf.fit_transform(split_by_call)\n",
+    "\n",
+    "tokens = tf_idf.inverse_transform(vecs)\n",
+    "\n",
     "#Convert to w2v\n",
     "import gensim\n",
     "w2v = gensim.models.KeyedVectors.load_word2vec_format(\"w2vfile\", binary=True)\n",
@@ -238,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
